--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>caching-proxy</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>caching-proxy</name>
-	<description>cahcing proxy</description>
+	<description>caching proxy</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -38,7 +38,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>31.1-jre</version>
+            <version>32.1.2-jre</version>
         </dependency>
 		<dependency>
 			<groupId>org.springframework.shell</groupId>
