--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.application.name=caching-proxy
 spring.shell.interactive.enabled=true
 spring.shell.command.script.enabled=true
+# Default origin, can be overridden by --origin argument
+
+proxy.origin=https://dummyjson.com
+
